# cleany

./: LICENSE  README.md  pyproject.toml
cleany/: cleaner.py  imagehandler.py
notebooks/: bad_image_names.txt  cleaning.ipynb
tests/: conftest.py  test_cleaner.py  test_imagehandler.py
tests/test_data/: test0.fits  test1.fits  test2.fits  test3.fits  test4.fits
